Fixing bug with owner not found

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 .idea/.idea.StackOverflowApp/.idea/encodings.xml
 .idea/.idea.StackOverflowApp/.idea/indexLayout.xml
 .idea/.idea.StackOverflowApp/.idea/misc.xml
+/.vs/StackOverflowApp
